<resources>
    <string name="app_name">GoldNav</string>
    <string name="goldsmiths">Goldsmiths</string>
    <string name="campus">Campus Navigator</string>
    <string name="group_m">Group M 2016 - 2017</string>
    <string name="joel">Joel Mayner</string>
    <string name="marci">Marcellino Samuels</string>
    <string name="bez">Bezhad Karimizadehbehbahani</string>
    <string name="thamir">Thamir Suwar</string>
    <string name="start">Touch to Start</string>
    <string name="accessibility">Accessibility</string>
    <string name="restricted">Shortcut through classrooms</string>
    <string name="escape">Include Emergency Exits</string>
    <string name="destination">Please enter your destination</string>
    <string name="location">Please enter the closest room</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="go">Go</string>
    <string name="header">header</string>
    <string name="upbutton">upButton</string>
    <string name="downbutton">downButton</string>
    <string name="wheelchair">wheelchair</string>
    <string name="restrictedsymbol">restrictedSymbol</string>
    <string name="imageview">imageView</string>
    <string name="footer">footer</string>
    <string name="Floor">Ground</string>
</resources>