<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/showRHB"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="groupm.goldnav.ShowMap"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <ImageView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:contentDescription="@string/header"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@color/colorGrey"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <ImageView
        android:id="@+id/footer"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/footer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@color/colorGrey"/>

    <TextView
        android:id="@+id/destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:contentDescription="@string/destination"
        android:text="@string/destination"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/location"
        app:layout_constraintRight_toRightOf="@+id/location"
        app:layout_constraintTop_toBottomOf="@+id/location"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/to_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:gravity="end"
        android:text="@string/to"
        android:textAlignment="textEnd"
        android:textColor="@color/colorPurple"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/destination"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="27dp"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="27dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/location"
        android:text="@string/location"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/to_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/FromLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/from"
        android:textColor="@color/colorTeal"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@+id/to_label"
        app:layout_constraintRight_toLeftOf="@+id/to_label"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <ImageButton
        android:id="@+id/upButton"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/upbutton"
        android:foreground="@drawable/button_up"
        android:hapticFeedbackEnabled="true"
        android:scaleType="fitXY"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/footer"
        app:layout_constraintTop_toTopOf="@+id/footer"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="16dp" />

    <ImageButton
        android:id="@+id/downButton"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/downbutton"
        android:foreground="@drawable/button_down"
        android:hapticFeedbackEnabled="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/footer"
        app:srcCompat="@drawable/button_down"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="16dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/rhb_f1"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp"/>

</android.support.constraint.ConstraintLayout>