<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="groupm.goldnav.Pathfinder">

    <ImageView
        android:id="@+id/footer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/colorGold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/upButton"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@color/colorGrey"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/header"
        android:layout_width="383dp"
        android:layout_height="73dp"
        android:contentDescription="@string/header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@color/colorGrey"/>

    <TextView
        android:id="@+id/entryTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="0dp"

        android:layout_marginRight="0dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/destination"
        android:text="@string/destination"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/DisplayTo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/entryFrom"
        app:layout_constraintRight_toRightOf="@+id/header"/>

    <TextView
        android:id="@+id/DisplayTo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"

        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:text="@string/to"
        android:textAlignment="textEnd"
        android:textAllCaps="true"
        android:textColor="@color/colorPurple"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/renderMap"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintLeft_toLeftOf="@+id/header"
        app:layout_constraintVertical_bias="0.857"
        app:layout_constraintTop_toBottomOf="@+id/DisplayFrom"
        app:layout_constraintRight_toLeftOf="@+id/entryFrom"/>

    <TextView
        android:id="@+id/DisplayFrom"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/from"
        android:textAlignment="textEnd"
        android:gravity="end"
        android:textAllCaps="true"
        android:textColor="@color/colorTeal"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/renderMap"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/header"
        app:layout_constraintRight_toRightOf="@+id/header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/entryFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/location"
        android:text="@string/location"
        android:textAllCaps="false"
        android:textColor="@color/colorTeal"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/DisplayFrom"
        app:layout_constraintRight_toRightOf="@+id/header"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/DisplayFrom"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        />

    <ImageButton
        android:id="@+id/upButton"
        android:layout_width="180dp"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/upbutton"
        android:foreground="@drawable/button_up"
        android:hapticFeedbackEnabled="true"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/renderMap"
        app:layout_constraintRight_toLeftOf="@+id/downButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/button_up"
        tools:layout_editor_absoluteY="504dp"/>

    <ImageButton
        android:id="@+id/downButton"
        android:layout_width="180dp"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/downbutton"
        android:foreground="@drawable/button_down"
        android:hapticFeedbackEnabled="true"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="@+id/renderMap"
        app:layout_constraintRight_toRightOf="@+id/renderMap"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/button_down"/>

    <ImageSwitcher
        android:id="@+id/renderMap"
        android:layout_width="384dp"
        android:layout_height="567dp"
        android:foreground="@drawable/rhb_f1"
        android:scrollbars="none"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.0"/>
</android.support.constraint.ConstraintLayout>
